# softrobot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
pybullet/: requirements.txt
pybullet/r2d2/: sim-key-control.py
pybullet/r2d2/analysis/: final_performance.py  parameter_analysis.py  telemetry.py
pybullet/r2d2/evolutionary_algorithm/: main.py  objective.py  training.py
tests/: test_telemetry.py  test_training.py
