[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "softrobot"
version = "0.1.0"
description = "PyBullet R2D2 simulation with an evolutionary algorithm for locomotion control."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "James Slater" }]
dependencies = [
    "pybullet",
    "numpy",
    "pandas",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/james-worx/softrobot"

# The importable package (`r2d2`) lives under the pybullet/ directory.
[tool.setuptools]
package-dir = { "" = "pybullet" }

[tool.setuptools.packages.find]
where = ["pybullet"]
